--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
 body{
-    background-color: red;
+    box-sizing: border-box;
+}
+.recetas{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.recetas article{
+    width: 30%;
+}
+
+.recetas article img{
+    width: 200px;
 }
