--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
 body{
-    background-color: red;
+    background-color: rgb(248, 232, 235);
 }
+
+.logo{
+     border-radius: 50%;
+    width: 180px;
+    padding: 30px;
+    }
