--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,9 @@ h1{
     border-radius: 7px;
     background-color: rgb(196, 4, 4);;
     text-decoration: none;
-    color: white;
+    color: white; 
+    
+    
 }
 
 .cargar_mas{
@@ -168,4 +170,55 @@ h1{
 /*CATEGORY*/
 /*SEARCH_RESULTS*/
 /*LOGIN*/
+.logi{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    margin: 0 auto;
+    margin-bottom: 230px;
+    width: 300px;
+    height: 135px;
+    padding-top: 20px;
+    background-color: rgb(196, 4, 4) ;
+    border-radius: 30px;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.logi div{
+    margin-bottom: 10px;
+}
+
+.logi div a{
+    color:white;
+    text-decoration: none;
+}
+
+
 /*REGISTER*/
+
+.regi {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    margin: 0 auto;
+    margin-bottom: 205px;
+    width: 350px;
+    height: 160px;
+    padding-top: 20px;
+    background-color: rgb(200,0,0) ;
+    border-radius: 30px;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+.regi div{
+    margin-bottom: 10px;
+}
+
+.regi div a{
+    color:white;
+    text-decoration: none;
+}
