--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@
 .carpetas form label{
     text-align: center;
     font-size: 16px;
+    padding-right: 20px;
 }
 
 body{
@@ -100,10 +101,12 @@ body{
 }
 .recetas article{
     width: 30%;
+    border: 1px solid rgba(0, 0, 0, 0.41);
 }
 
 .recetas article img{
-    width: 100%; 
+    width: 90%; 
+    padding-top: 5%;
     max-width: 400px; 
     display: block;
     margin: 0 auto;
@@ -163,15 +166,27 @@ h1{
 
 
 /*RECETA*/
-.imagen_receta img{
-    width: 20%;
+
+.section_recetas{
     display:flex;
-    justify-content: center;
     align-items: center;
+    gap:50px;
+    margin: 50px
+}
+
+.imagen_receta img{
+    width: 250px;
     height: auto;
-    margin: 0 auto;
-    }
+    } 
     
+.receta_instru{
+    width: 700px;
+}
+
+.receta_tiempo{
+    max-width: 700px;
+}
+
 .receta p {
     text-align: center;
 }
@@ -205,7 +220,7 @@ h1{
   
 
 
-/*hacer listas y fijarse si hay que poner ingredientes y poner la foto al costado y el texto al lado*/
+/*hacer listas y poner la foto al costado y el texto al lado*/
 
 /*CATEGORIES*/
 /*CATEGORY*/
