--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,13 @@ h1{
     gap:50px;
     margin: 50px
 }
+.receta_categorias{
+    margin-bottom: 80px;
+}
+.receta_tiempo{
+    margin-bottom: 80px;
+    width: 200px;
+}
 
 .imagen_receta img{
     width: 250px;
@@ -180,7 +187,7 @@ h1{
     } 
     
 .receta_instru{
-    width: 700px;
+    width: 400px;
 }
 
 .receta_tiempo{
