--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,6 @@ body{
     width: 30%;
     border: 1px solid rgba(0, 0, 0, 0.41);
     background-color:white;
-
 }
 
 .recetas article img{
@@ -119,6 +118,7 @@ body{
     display: block;
     margin: 0 auto;
 }
+
 h1{
     text-align: center;
 }
@@ -234,9 +234,6 @@ h1{
   }
   
 
-
-/*hacer listas y poner la foto al costado y el texto al lado*/
-
 /*CATEGORIES*/
 
 .categories_container{
@@ -251,9 +248,17 @@ h1{
     justify-content: center;
     align-items: center;
     width: 30%;
-    height: 200px;
+    height: 100px;
     border: 1px solid #eee;
-    background-color: rgba(0, 0, 255, .4)
+    background-color: rgba(242, 1, 1, 0.483)
+}
+
+.categories_container a{
+    color:black;
+    text-decoration: none;
+    border: 1px solid rgba(0, 0, 0, 0.41);
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 /*CATEGORY*/
@@ -303,3 +308,16 @@ h1{
     text-decoration: none;
 }
 
+/*MEDIAS*/
+
+@media (max-width: 430px){
+    .carpetas{
+        display:flex;
+        flex-direction: column;
+    }
+    .recetas{
+        width: 40%;
+        margin:34px;
+    }
+    
+}
