--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ h1{
     text-align: center; 
     font-weight: bold;
 }
-/*hacer que carguen 10 mas*/
+
 
 
 /*RECETA*/
@@ -291,9 +291,11 @@ h1{
     flex-wrap: wrap;
     justify-content:center;
     margin: 0 auto;
+    align-items: center;
+   
     margin-bottom: 205px;
-    width: 350px;
-    height: 160px;
+    width: 400px;
+    height: 230px;
     padding-top: 20px;
     background-color: rgb(200,0,0) ;
     border-radius: 30px;
