--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,6 @@ body{
     width: 30%;
     border: 1px solid rgba(0, 0, 0, 0.41);
     background-color:white;
-
 }
 
 .recetas article img{
@@ -285,3 +284,15 @@ h1{
     text-decoration: none;
 }
 
+
+/*Responsive Mobile*/
+@media (max-width: 420px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        box-sizing: content-box;
+        align-items: center;
+        padding: 0%;
+        width: 100vw;
+        margin: 0%;
+    }
