--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,6 @@ body{
     display: block;
     margin: 0 auto;
 }
-
 h1{
     text-align: center;
 }
@@ -170,7 +169,7 @@ h1{
     text-align: center; 
     font-weight: bold;
 }
-
+/*hacer que carguen 10 mas*/
 
 
 /*RECETA*/
@@ -233,7 +232,6 @@ h1{
     margin-top: 10px;
   }
   
-
 /*CATEGORIES*/
 
 .categories_container{
@@ -242,7 +240,6 @@ h1{
     gap: 10px;
     justify-content: space-between;
 }
-
 .category_button{
     display: flex;
     justify-content: center;
@@ -252,7 +249,6 @@ h1{
     border: 1px solid #eee;
     background-color: rgba(242, 1, 1, 0.483)
 }
-
 .categories_container a{
     color:black;
     text-decoration: none;
@@ -292,10 +288,9 @@ h1{
     justify-content:center;
     margin: 0 auto;
     align-items: center;
-   
     margin-bottom: 205px;
-    width: 400px;
-    height: 230px;
+    width: 360px;
+    height: 170px;
     padding-top: 20px;
     background-color: rgb(200,0,0) ;
     border-radius: 30px;
@@ -310,8 +305,6 @@ h1{
     text-decoration: none;
 }
 
-<<<<<<< HEAD
-
 /*Responsive Mobile*/
 @media (max-width: 420px) {
     body{
@@ -323,9 +316,8 @@ h1{
         width: 100vw;
         margin: 0%;
     }
-=======
-/*MEDIAS*/
 
+    /*MEDIAS*/
 @media (max-width: 430px){
     .carpetas{
         display:flex;
@@ -335,6 +327,4 @@ h1{
         width: 40%;
         margin:34px;
     }
-    
-}
->>>>>>> bcc2e43c1f451f7a49051024a35554a61dbda1b6
+}}
