--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,10 @@ h1{
 }
 
 /*SEARCH_RESULTS*/
+.lo_buscado{
+    text-align: center;
+    font-style: italic;
+}
 
 /*LOGIN*/
 .logi{
@@ -316,19 +320,7 @@ h1{
 
 
 /*Responsive Mobile*/
-@media (max-width: 420px) {
-    body{
-        display: flex;
-        flex-direction: column;
-        box-sizing: content-box;
-        align-items: center;
-        padding: 0%;
-        width: 100vw;
-        margin: 0%;
-    }
-
-    /*MEDIAS*/
-@media (max-width: 430px){
+@media (max-width: 420px){
     .carpetas{
         display:flex;
         flex-direction: column;
@@ -337,4 +329,13 @@ h1{
         width: 40%;
         margin:34px;
     }
-}}
+    body{
+        display: flex;
+        flex-direction: column;
+        box-sizing: content-box;
+        align-items: center;
+        padding: 0%;
+        width: 100px;
+        margin: 0%;
+    }
+}
