--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ h1{
     text-align: center; 
     font-weight: bold;
 }
-/*hacer que carguen 10 mas*/
+
 
 
 /*RECETA*/
@@ -247,7 +247,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 25%;
     height: 100px;
     border: 1px solid #eee;
     background-color: rgba(242, 1, 1, 0.483)
@@ -262,9 +262,26 @@ h1{
 }
 
 /*CATEGORY*/
-
+.grilla_categoria{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px;
+}
+.grilla_categoria article{
+    width: 30%;
+    border: 1px solid rgba(0, 0, 0, 0.41);
+    background-color:white;
+}
 .grilla_categoria img{
-    width: 300px;
+    width: 90%; 
+    padding-top: 5%;
+    max-width: 400px; 
+    display: block;
+    margin: 0 auto;
 }
 
 /*SEARCH_RESULTS*/
