--- a/css/styles.css
+++ b/css/styles.css
@@ -145,10 +145,7 @@ h1{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    padding-left: 300px;
-    padding-right: 300px;
-    gap: 5px;
+    justify-content: center;
     box-sizing: border-box;
     border-radius: 7px;
     background-color: rgb(196, 4, 4);;
@@ -176,7 +173,7 @@ h1{
 
 .section_recetas{
     display:flex;
-    align-items: center;
+    align-items: flex-start;
     gap:50px;
     margin: 50px
 }
@@ -247,8 +244,8 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 25%;
-    height: 100px;
+    width: 15%;
+    height: 50px;
     border: 1px solid #eee;
     background-color: rgba(242, 1, 1, 0.483)
 }
@@ -338,25 +335,60 @@ h1{
 
 /*Responsive Mobile*/
 @media (max-width: 420px){
+    .header {
+        flex-direction: column;
+    }
+    h1{
+        text-align: center;
+    }
+    
     .carpetas{
         display:flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        width: 100px;
+        width: 100%;
+       gap: 10px;
     }
-    .recetas{
-        width: 60%;
-        margin:4px;
+    .recetas article{
+        width: 100%;
+       
     }
-    body{
+    .category_button{
+        width: 40%;
+    }
+       
+    
+    .login ul{
         display: flex;
-        flex-direction: column;
-        box-sizing: content-box;
-        align-items: center;
-        padding: 0%;
-        width: 100px;
-        margin: 0%;
+        flex-direction: row;
+        justify-content: center;
+
     }
+    .footer_nombres{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: center;
+    }
+    .grilla_categoria article{
+        width: 100%;
+    }
+    .carpetas form{
+        width: 350px;
+    }
+   .section_recetas{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    padding: 0;
+    gap: 0;
+   }
+   .imagen_receta {
+    align-self: center;
+   }
+    
 }
